@@ -1,4 +1,364 @@
-FrankCraft
-==========
+#FrankCraft v1.0
 
-Minecraft mod pack put together by myself.
+
+####Minecraft 1.6.2 mod pack put together by myself.
+#####8/30/2013
+##Setup
+* **Java PreRelease** v7u40 Build b40 - [http://jdk7.java.net/download.html](http://jdk7.java.net/download.html "Java PreRelease")
+* **Forge** v9.10.0.845 1.6.2 (8/28/2013) 10:21:40 PM - [http://files.minecraftforge.net/](http://files.minecraftforge.net/ "Forge")
+ * Download the **'installer'**.
+ * Run the file and select **'Install Client'**
+  * Run Minecraft Vanilla Launcher > Edit Profile > Use Version > Set to: release 1.6.2-Forge9.10xxx
+  * If start crashing because of memory errors with too many mods running. Under JVM Arguments: increase the number, which is RAM from 1 **-Xmx1G** to 2 or higher.
+  * Also if Minecraft keeps crashing add this JVM Argument: **-XX:MaxPermSize=128m**
+  * Start the game using Forge Profile. Check in **'mods'** for Forge in game.
+
+##Mods
+ * **Render Player API** - http://www.minecraftforum.net/topic/1261354-162api-render-player-api/
+ * **Player API Universal** - http://www.minecraftforum.net/topic/738498-162api-player-api/
+ * **Industrial Craft 2 Experimental (IC2)** v2.0.122 (8/29/2013) - http://ic2api.player.to:8080/job/IC2_experimental/
+ * **GalactiCraft** v1.6.2-a0.1.39.628 (8/30/2013) - http://ci.micdoodle8.com/job/Galacticraft/
+  * Requires **'MicdoodleCore'**.
+ * **MicdoodleCore** v1.6.2-a0.1.39.628 (8/30/2013) - http://ci.micdoodle8.com/job/Galacticraft/
+ * **~~Mekanism~~** v5.5.7.201 - http://universalelectricity.com/mekanism/downloads
+  * Download the 3 files. Do not download the MDK file.
+  * https://github.com/aidancbrady/Mekanism
+   * Crash: **ic2.api.recipe.IMachineRecipeManager.addRecipe**
+    * ***___!!  Removed Mekanism till fix.  !!___***
+ * **Inventory Tweaks** v1.56 (August 21) - http://www.minecraftforum.net/topic/1720872-162-inventory-tweaks-156-august-21/
+  * http://build.technicpack.net/job/Inventory-Tweaks/
+  * Download the mod file. Do not download the API file.
+ * **ChickenChunks** v1.3.3.2 - http://www.minecraftforum.net/topic/909223-162-smp-chickenbones-mods/
+  * http://www.chickenbones.craftsaddle.org/Files/New_Versions/links.php
+ * **CodeChickenCore** v0.9.0.5 - http://www.minecraftforum.net/topic/909223-162-smp-chickenbones-mods/
+  * http://www.chickenbones.craftsaddle.org/Files/New_Versions/links.php
+ * **EnderStorage** v1.4.3.3 - http://www.minecraftforum.net/topic/909223-162-smp-chickenbones-mods/
+  * http://www.chickenbones.craftsaddle.org/Files/New_Versions/links.php
+ * **NotEnoughItems(NEI)** v1.6.1.3 - http://www.minecraftforum.net/topic/909223-162-smp-chickenbones-mods/
+  * http://www.chickenbones.craftsaddle.org/Files/New_Versions/links.php
+ * **Translocators** v1.1.0.8 - http://www.minecraftforum.net/topic/909223-162-smp-chickenbones-mods/
+  * http://www.chickenbones.craftsaddle.org/Files/New_Versions/links.php
+ * **WR-CBE Wireless Redstone** v1.4.0.5 - http://www.minecraftforum.net/topic/909223-162-smp-chickenbones-mods/
+  * http://www.chickenbones.craftsaddle.org/Files/New_Versions/links.php
+  * Requires **‘Forge Multi-Part’**
+ * **Forge Multi-Part** v1.0.0.153 - http://files.minecraftforge.net/ForgeMultipart/
+  * Download **universal** file. Do not download dev file.
+ * **Railcraft** v8.0.1.0 (8/21/2013) 8:49 am - http://www.minecraftforum.net/topic/701990-162-railcraft-8000-forge/
+  * http://www.railcraft.info/releases/
+ * **Build Craft** v360 - http://nallar.me/buildservice/job/Buildcraft/
+ * **UgoCraft** v2.1.1 - http://www.maocat.net/?page_id=6586
+  * Scroll to bottom of the page for the link to **'UgoCraft_Client_MC1.6.2-2.1.1'**
+ * **Armor Status HUD** - v1.12 - http://www.minecraftforum.net/topic/1114612-162-bspkrs-mods-armorstatushud-directionhud-statuseffecthud/
+  * Requires **'bskpkrs Core'**.
+ * **Tree Capitator** v1.6.2.r04 (8/24/2013) - http://www.minecraftforum.net/topic/1009577-162-daftpvfs-mods-treecapitator-ingameinfo-crystalwing-startinginv-floatingruins/
+  * http://bspk.rs/MC/TreeCapitator_Forge/index.html
+  * Requires **'bskpkrs Core'**.
+ * **bskpkrsCore** v3.03 - http://bspk.rs/MC/bspkrsCore/index.html
+ * **~~Universal Electricity~~** v164 - http://universalelectricity.com/universalelectricity/downloads
+  * Download the 1 file. Do not download the API file.
+  * https://github.com/Universal-Electricity/Universal-Electricity
+  * ***___!! For modders only it seems. Does not show up in Mod list in-game. !!___***
+ * **~~Basic Components~~** v8 - http://universalelectricity.com/basiccomponents/downloads~~
+  * https://github.com/Universal-Electricity/Basic-Components
+  * ***___!! Do not need to install this mod. 'GalactiCraft' will automatically download this. !!___***
+ * **Resonant Induction** v167 - http://universalelectricity.com/resonant-induction/downloads
+  * Download the 1 file. Do not download the API file.
+ * **MFFS** v220 - http://universalelectricity.com/mffs/downloads
+  * Download the 1 file. Do not download the API file.
+ * **Atomic Science** v137 - http://universalelectricity.com/atomic-science/downloads
+  * Download the 1 file, **'Atomic_Science'**. Do not download the API file.
+  * ***___!! Crash: Open file and delete the 'basiccomponents' folder. !!___*** **Works.**
+ * **ICBM** v224 - http://universalelectricity.com/icbm/downloads
+  * Download the 3 files. Do not download the API file.
+
+CraftGuide v1.6.7.4 - http://www.minecraftforum.net/topic/731133-162-craftguide-v1674/
+
+Applied Energetic v13.a (8/27/2013) - http://ae-mod.info/Downloads/
+@h@***	-Dev build v14 - http://ae-mod.info/Dev/
+OpenPeripheral v0.2.0-beta (8/16/2013) - 
+
+http://www.computercraft.info/forums2/index.php?/topic/13063-mc-152-cc-153-openperipheral/
+	-http://www.openperipheral.info/openperipheral/downloads
+Extra Cells AE Add-On Fluid Storage v1.3.6 - http://www.minecraftforum.net/topic/1801643-
+
+147152162-ae-add-on-fluid-storage-m3gas-extracells-v-136-smp-ssp/
+Misc Peripherals v3.3 - http://www.computercraft.info/forums2/index.php?/topic/4587-
+
+cc153mc152-miscperipherals-33/
+	-Author on an indefinite break. Quickfix For MC v1.6x is v3.4b2
+
+AE Peripheral v1.0.1.1 - http://www.computercraft.info/forums2/index.php?/topic/12663-
+
+applied-energistics-peripheral/
+	-Requires 'ComputerCraft'
+Computer Craft v1.56 - http://www.computercraft.info/
+
+Zan's Minimap (VoxelMap) v115 - Link 1 - http://www.minecraftforum.net/topic/1116564-162-
+
+152-mamiyaotarus-mods-zans-minimap-voxelmap-chatbubbles-etc/
+	-http://www.planetminecraft.com/mod/zans-minimap/
+        -Download where it says 'Modloader/Forge version'. Filename is 
+
+'ZansMinimap1.6.2.zip'.
+
+Forestry v2.3.0.1 - http://forestry.sengir.net/wiki.new/doku.php 
+        -Download the 1 file under Universal Binary.
+
+Biomes O Plenty v0.6.2 - http://www.minecraftforum.net/topic/1495041-162-forge-biomes-o-
+
+plenty-v062-no-more-terrain-stripes/
+	-https://github.com/BiomesOPlenty/BiomesOPlenty/releases
+        -Download the mod. Do not download the API file.
+
+Tinkers Construct v1.4.3 - http://www.minecraftforum.net/topic/1659892-152162tinkers-
+
+construct/
+
+Natura v2.1.7 - http://www.minecraftforum.net/topic/1753754-162natura/
+@h@***	-If you're running Railcraft: Open up the Railcraft config and set "block.hidden" 
+
+to 0. That should fix any and all issues involving trees missing blocks, pistons not 
+
+pushing, portals not forming, etc.
+@h@***	-ID Conflict: 'Natura.txt'. Add -1000 to the ID's. Change I:"Bloodwood Fence 
+
+Gate"=3347 to 2347, I:"Hopseed Fence Gate"=3348 to 2348, I:"Silverbell Fence Gate"=3350 to 
+
+2350, I:"Amaranth Fence Gate"=3351 to 2351, I:"Tigerwood Fence Gate"=3352 to 2352, 
+
+I:"Willow Fence Gate"=3353 to 2353, I:"Darkwood Fence Gate"=3354 to 2354, I:"Fusewood 
+
+Fence Gate"=3355 to 2355.
+
+Dynamic Liquid Tanks v0.3.0 - http://www.minecraftforum.net/topic/1861781-162-dynamic-
+
+liquid-tanks-color-and-camo-tanks-store-potions-builtin-endertanks-resize-w-bcte-power-
+
+2000-dl/
+	-In-game mods says it's v2.09.01 Assuming it's visual bug.
+
+Diamond Buckets+ v0.98d - http://www.minecraftforum.net/topic/1466881-162forge-diamond-
+
+buckets-v098d-hold-more-stuff-in-twenty-three-new-buckets-now-link-ender-buckets-to-any-
+
+tank-from-any-mod-quartz-buckets/
+
+BetterFurnaces v3.3 - http://www.minecraftforum.net/topic/869534-162spmpbetter-furnace-
+
+mod/
+
+RopesPlus v1.4.5 - http://www.atomicstryker.net/ropesplus.html
+	-Changelog and Version number in the file. 
+Finder Compass v1.6.2B - http://www.atomicstryker.net/findercompass.html
+@h@***	-Can't place in mods folder. Need to open file and install manually. Read the 
+
+Readme.txt.
+@h@***	-Will Crash if 'FinderCompass.cfg' isn't placed into 'config' folder manually.
+	-Changelog and Version number in the file.
+
+EnhancedProtals 2 v1.0.8 - http://shadeddimensions.co.uk/enhancedportals-2/
+	-http://www.minecraftforum.net/topic/1301217-162-enhancedportals-2/
+        -Requires 'EnhancedCore'.
+EnhancedCore v1.1.3 - http://shadeddimensions.co.uk/enhancedcore/downloads/
+
+NEI Add-ons v1.9.0.r40 - http://www.minecraftforum.net/topic/1803460-nei-addons-v190-
+
+updated-to-mc-162/
+
+Advanced Machines(IC2) v5.1.5  (8/29/2013) - http://forum.industrial-craft.net/index.php?
+
+page=Thread&threadID=4907
+	-http://atomicstryker.net/advancedmachines.html
+
+Steve’s Carts v2.0.0.a131 - http://www.minecraftforum.net/topic/680276-16-steves-carts-2-
+
+v200a123/
+@h@***	-Red Screen ID Conflict: 4094 with 'LiquidXP'. Delete 'config' folder or add -2000 
+
+to 'StevesCarts.cfg'. Works.
+
+Project: Red v4.0.0pre.37 (8/17/2013) - https://github.com/MrTJP/ProjectRed/releases/
+        -Requires at least 'ForgeMultipart' v1.0.0.130 (8/18/2013). Works.
+
+Liquid XP v56.0.2 - http://www.minecraftforum.net/topic/1001131-162-immibiss-mods-smp-
+
+now-with-857-less-version-numbers-in-this-title/
+        -http://immibis.com/mcmoddl/
+        -Requires 'Immibis Core'.
+@h@***	-Red Screen ID Conflict: 'pamharvestcraft.cfg' Change I:pamlemonsaplingID=4085 to 
+
+2834.
+@h@***	-Red Screen ID Conflict: 4094 with 'RopesPlus'. Delete 'config' folder.
+Immibis Core v56.0.3 - 
+
+http://dl.dropboxusercontent.com/u/2944265/mods/autobuilt/index.html
+
+Iron Chests v5.3.20.546 (8/28/2013) - http://www.minecraftforum.net/topic/981855-15-and-
+
+up-forge-universalironchests-50-minecraft-15-update/
+	-http://files.minecraftforge.net/IronChests2/
+
+SlabCraft v1.5a - http://www.minecraftforum.net/topic/1161861-162-forge-haycraft-
+
+flowercraft-slabcraft-staircraft/
+	-http://www.mediafire.com/download/82hii18y3q154fj/Slabcraftmod_1.5a_-
+
+_1.6.2_Forge.zip
+
+Factorization v0.8.04beta2 (8/7/2013) - http://www.minecraftforum.net/topic/1351802-162-
+
+factorization-0804/
+@h@***	-ID Conflict: 'ProjectRed.cfg' Change I:"Gate Part ID"=9030 to 3602, I:"Wire Part 
+
+ID"=9031 to 3603, I:"Jacketed Wire Part ID"=9032 to 3604, I:"Lantern Part ID"=9033 to 
+
+3605, I:"Inverted Lantern Part ID"=9034 to 3606, I:"Lamp Part ID"=9035 to 3607, 
+
+I:"Inverted Lamp Part ID"=9036 to 3608.
+
+CryoChamber v0.3 - http://renari.github.io/Cryochamber/
+	-https://github.com/Renari/Cryochamber
+
+Extra Utilities v0.3 Prerelease 3a - http://www.minecraftforum.net/topic/1776056-15-162-
+
+betaforge-extra-utilities-v024g/
+@h@***	-ID Conflict: 'ProjectRed.cfg' Change 31736 to 31729.
+
+MrCrayfish Furniture Mod v2.9.2 (7/19/2013) - http://www.minecraftforum.net/topic/1114866
+
+-162forgesspsmp-mrcrayfishs-furniture-mod-v292-mail-update/
+
+GraveStone v2.3.3 - http://www.minecraftforum.net/topic/1711328-162-sspsmp-gravestone-
+
+mod-v233/
+
+Metallurgy 3 v3.2.3 - http://minecraft.curseforge.com/mc-mods/metallurgy/
+	-http://minecraft.curseforge.com/mc-mods/metallurgy/files/
+        -Requires 'KeithyUtils v1.2'.
+KeithyUtils v1.2 - http://minecraft.curseforge.com/mc-mods/keithyutils/files/
+@h@***	-Crash: When first run with error: java.lang.ClassCastException: 
+
+rebelkeithy.mods.keithyutils.metablock.MetaBlock cannot be cast to 
+
+appeng.common.base.AppEngMultiBlock
+        -Delete 'config' folder again. Rerun Minecraft.
+@h@***	-ID Conflict: 'ProjectRed.cfg' Change 31731 to 31728, 31732 to 31711, 31733 to 
+
+31712, 31734 to 31725, 31735 to 31724.
+
+Better Grass & Leaves v1.6.2.H - http://www.minecraftforum.net/topic/508886-162-forge-
+
+better-grass-leaves-mod-v162h/
+
+Twilight Forest v1.19.0 (8/4/13) - http://www.minecraftforum.net/topic/561673-162-the-
+
+twilight-forest-v1190-updated-to-minecraft-16/
+
+Pam’s HarvestCraft 1.6.2 v1.1.2 - http://www.minecraftforum.net/topic/402069-
+
+162152othersforgesmppams-mods-aug-28th-meat-recipes-fix-saturation-bug-fix/
+@h@***	
+
+-ID Conflict: 'pamharvestcraft.cfg' Change I:barleyID=13001 to 12950, I:barleyseedID=13002 
+
+to 12951, I:cauliflowerID=13003 to 12952, I:cauliflowerseedID=13004
+
+to 12953, I:leekID=13005 to 12954, I:leekseedID=13006 to 12955, I:oatsID=13007 to 12956, 
+
+I:oatsseedID=13008 to 12957, I:parsnipID=13009 to 12958, I:artichokeseedID=13020 to 12959, 
+
+I:brusselsproutID=13021 to 12960, I:brusselsproutseedID=13022 to 12961, I:rhubarbID=13027 
+
+to 12962, I:rhubarbseedID=13028 to 12963, I:seaweedID=13029 to 12964, 
+
+I:seaweedseedID=13030 to 12965, I:wintersquashID=13031 to 12966, 
+
+I:wintersquashseedID=13032 to 12967, I:beeswaxID=13050 to 12968, I:pamcropID=4020 to 2825, 
+
+I:pamseaweedwildID=4029 to 2826, I:pamstrawberrywildID=4030 to 2827, I:pamappleID=4031 to 
+
+2828, I:pamapplesaplingID=4032 to 2829, I:pamorangesaplingID=3972 to 2830, 
+
+I:coloredclothstairswhiteID=4035 to 2831, I:coloredclothstairsorangeID=4036 to 2832, 
+
+I:coloredclothstairsmagentaID=4037 to 2833, I:pamlemonsaplingID=4085 to 2834, 
+
+I:pamcherryID=4090 to 2835, I:pamcherrysaplingID=4091 to 2836, I:pamblueberrywildID=4089 
+
+to 2838, I:pamorangeID=3971 to 2839, I:peanutID=13401 to 12970, I:peanutseedID=13402 to 
+
+12971.
+
+@h@***	-ID Conflict: 'AppliedEnergistics.cfg' Change I:appeng.TinyTNT=3970 to 2837.
+
+Damage Indicators - v2.9.0.0 - http://www.minecraftforum.net/topic/1536685-
+
+161162152forge-hit-splat-damage-indicators-v2851-rpg-ui-and-damage-amount-mod/
+
+Backpacks v1.18.16 (8/27/2013) - http://www.minecraftforum.net/topic/1492661-15x-16x-
+
+backpacks-v-11816/
+
+Biblo Craft v1.4.0 (8/17/2013) - http://www.minecraftforum.net/topic/1680480-
+
+16215xforgesmp-bibliocraft-v140-bookcases-armor-stands-shelves-printing-presses-lamps-
+
+tables-and-more-updated-08172013/
+
+Coral Reef (7/22/2013) - http://www.minecraftforum.net/topic/1106449-16215x145etc-coral-
+
+reef-mod-updated-2272013/
+
+ExtrabiomesXL v3.14.1 - http://www.minecraftforum.net/topic/1090288-162-152-
+
+extrabiomesxl-3141/
+
+PortalGun v2.0.0 - http://ichun.us/mods/portalgun/download/
+	-Requires 'iChun Util'.
+iChun Util v2.1.0 - http://ichun.us/mods/ichun-util/
+
+Compact Solars v4.4.12.119 (8/28/2013) - http://files.minecraftforge.net/CompactSolars/
+
+TF2 Teleporter v1.6.2a - http://www.minecraftforum.net/topic/334760-162smpssplan-team-
+
+fortress-2-teleporter-sentry-dispenser/
+TF2 Sentry v1.6.2a - http://www.minecraftforum.net/topic/334760-162smpssplan-team-
+
+fortress-2-teleporter-sentry-dispenser/
+TF2 Dispenser v1.6.2a - http://www.minecraftforum.net/topic/334760-162smpssplan-team-
+
+fortress-2-teleporter-sentry-dispenser/
+
+=========================================================================
+Tools (optional)
+=========================================================================
+
+MCEdit v0.1.7 - http://www.mcedit.net/
+        -open source world editor
+
+IDFix v1.1.0 - http://www.minecraftforum.net/topic/1928632-162smpforge-idfix-resolve-id-
+
+conflicts-automatically/
+	-mod automatically resolves ID conflicts for blocks, items, and enchantments.
+@h@***	-Use at own risk! It will mess up your config ID's. Backup 'config' First!
+@h@***	-Delete 'config' folder. Keep file 'FinderCompass.cfg' or it will Crash.
+@h@***	-Red Screen ID Conflict: 'immibis.cfg' Change I:liquidxp.machine.id=4085 to 2821. 
+
+Works.
+@h@***	-Delete 'idfix.txt' each time running Minecraft when debugging for a fresh file. 
+@h@***	-If 'IDFix' is removed the ID Conflicts will return. 
+
+OptiFine B4 (7/19/2013) - http://www.minecraftforum.net/topic/249637-162-optifine-hd-b4-
+
+fps-boost-hd-textures-aa-af-and-much-more/
+	-This mod adds support for HD textures and a lot of options for better looks and 
+
+performance.
+@h@***	-Three Files to choose from. Pick only one to install. Read the Instructions.
+@h@***	-Read the Entire section in 'Installation for Minecraft 1.6.2 and newer' and 'with 
+
+Forge'. Add .
+@h@***	-Note OptiFine doesn't seem to work well with the NEI mod.
+@h@***	-Use at own risk! It will mess up how your game runs. I am not using this. Too 
+
+many Crashes.
